# memeBucket

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  agent.md  bearer.ignore  changelog.md  docker-compose.yml  flake.nix  privacy.md  terms.md  test-klipy.js
.githooks/: pre-commit
.github/workflows/: ci.yml  release-desktop.yml
.superpowers/sdd/: final-review-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  settings.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: commands.toml
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: index.html  settings.css  settings.html  style.css
apps/server/: Cargo.toml
apps/server/migrations/: 0001_initial.sql  0002_rename_categories_to_pools.sql  0003_rename_media_links_to_images.sql  0004_pool_sharing.sql  0005_user_usernames.sql  0006_image_notes.sql  0007_pool_whitelist.sql  0008_normalize_tenor_urls.sql  0009_rewrite_tenor_mp4_to_gif.sql  0010_library_intelligence.sql  0011_rename_pools_to_buckets.sql  0012_rename_discord_bucket_to_inbox.sql  0014_auth_expansion.sql  0015_cdn_columns.sql  0016_cdn_objects.sql
apps/server/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  static_files.rs
apps/server/src/api/: account.rs  buckets.rs  categories.rs  gifs.rs  images.rs  media_links.rs  mod.rs  pools.rs  random.rs  validation.rs
apps/server/src/auth/: discord_oauth.rs  middleware.rs  mod.rs  sessions.rs  telegram_oauth.rs
apps/server/src/discord/: commands.rs  interactions.rs  mod.rs  signatures.rs
apps/server/src/domain/: bucket.rs  category.rs  image.rs  media_link.rs  mod.rs  user.rs  user_key.rs
apps/server/src/repositories/: buckets.rs  cached.rs  categories.rs  images.rs  media_links.rs  mod.rs  pools.rs  send_history.rs  users.rs
apps/server/src/services/: account.rs  buckets.rs  categories.rs  images.rs  migration.rs  mod.rs  random.rs  storage.rs  video_converter.rs
apps/server/tests/: api_auth.rs  bucket_api.rs  bucket_matching.rs  category_api.rs  category_matching.rs  discord_commands.rs  discord_interactions.rs  export_delete.rs  gifs_api.rs  health.rs  images_api.rs  oauth_sessions.rs  repositories.rs  user_key.rs
apps/web/: package-lock.json  package.json
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/429/: page.tsx
apps/web/app/account/: page.tsx
apps/web/app/buckets/: page.tsx
apps/web/app/categories/: page.tsx
apps/web/app/categories/detail/: page.tsx
apps/web/app/changelog/: page.tsx
apps/web/app/download/: page.tsx
apps/web/app/license/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/picker/: page.tsx
apps/web/app/pools/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/search/: page.tsx
apps/web/app/share/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/components/: account-modal.tsx  app-shell.tsx  bucket-form.tsx  bucket-list.tsx  category-form.tsx  category-list.tsx  connected-accounts.tsx  gif-search-modal.tsx  image-form.tsx  image-list.tsx  legal-page.tsx  media-link-form.tsx  media-link-list.tsx  picker-add-links.tsx  pool-form.tsx  pool-list.tsx  require-auth.tsx  share-dialog.tsx  status-page.tsx  telegram-widget.tsx  theme-toggle.tsx  user-provider.tsx  username-modal.tsx
apps/web/components/ui/: sidebar.tsx  sonner.tsx
apps/web/hooks/: use-touch-hold.ts
apps/web/lib/: api.ts  picker-add-links.ts  textarea-paste.ts  types.ts
apps/web/public/: changelog.json
docs/superpowers/plans/: 2026-07-15-picker-add-links.md
docs/superpowers/specs/: 2026-06-28-b2-content-deduplication-design.md  2026-07-14-bluesky-tenor-support-design.md  2026-07-15-picker-add-links-design.md
