[package]
name = "memebucket-server"
version = "0.1.6"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy = "0.15"
ed25519-dalek.workspace = true
hex.workspace = true
hmac.workspace = true
ipnet = "2.12.0"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tempfile.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor = { version = "0.8.0", default-features = false, features = ["axum", "tracing"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
