[package]
name = "memebucket-picker"
version = "0.1.0"
description = "memeBucket Desktop Mini-Picker Overlay"
authors = ["Cameron Varley"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon", "dynamic-acl"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-updater = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.1.3"
arboard = "3.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
panic = "abort" # Strip expensive panic formatting
codegen-units = 1 # Optimize for size
lto = true # Link-time optimization for size
opt-level = "z" # Optimize for size
strip = true # Strip symbols and debug info
